# buckshot-roulette-gameplay-engine

./: .codecov.yml  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: game_players.rs  game_session.rs  item.rs  lib.rs  loadout.rs  multiplayer_count.rs  player.rs  player_number.rs  round.rs  round_number.rs  round_player.rs  round_start_info.rs  seat.rs  shell.rs  stun_state.rs  turn.rs
tests/: all_four_shoot_self.rs  item_tests.rs  one_shoots_two_two_shoots_self.rs
