[package]
name = "buckshot-roulette-gameplay-engine"
version = "0.1.6"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
indexmap = "2.6.0"
rand = "0.8.5"
thiserror = "2.0.3"

[features]
# Defines a feature named `webp` that does not enable any other features.
print_rng_to_stdout = []

[dev-dependencies]
rand_chacha = "0.3.1"
