[package]
name = "buckshot-roulette-gameplay-engine"
version = "5.1.0"
edition = "2021"

repository = "https://github.com/Cyberboss/buckshot-roulette-gameplay-engine"
description = "An engine to simulate games of Buckshot Roulette"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
anyhow = "1.0.93"
indexmap = "2.6.0"
rand = "0.7"
thiserror = "2.0.3"

[features]
print_rng_to_stdout = []
